Fixed spacing
-Fixed spacing for Music page mobile via music.css
-Fixed spacing/font size on mobile for events/venues on tour.html via event-list.css

--- a/css/event-list.css
+++ b/css/event-list.css
@@ -1,4 +1,4 @@
-    @import url("http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,400italic");
+    @import url("https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,400italic");
     /*@import url("//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css");*/
     @import url("../fonts/font-awesome/css/font-awesome.min.css")
     body {
@@ -221,6 +221,10 @@
 			width: 40px;
 			padding: 10px 0px 9px;
 		}
+
+		.long-name {
+			font-size: 16pt;
+		}
 	}
 
 	@media (max-width: 990px) {
@@ -265,6 +269,7 @@
 		.event-list > li > .info > .sub-title {
 			padding: 10px;
 			padding-top: 5px;
+		    padding-bottom: 5px;
 		}
 
 		.event-list > li > .info > ul {
@@ -294,5 +299,17 @@
 
 		.info h2, .info p {
 			text-align: center;
+		}
+
+		.event-list > li > .info > .long-event {
+			font-size: 15pt;
+		}
+
+		.event-list > li > .info > .long-venue {
+			font-size: 14pt;
+		}
+
+		.event-list > li > .info > .extra-long-venue {
+			font-size: 13pt;
 		}
 	}
