--- a/css/music.css
+++ b/css/music.css
@@ -36,3 +36,19 @@ iframe, object, embed {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 15px;
 }
+
+/*Media Queries*/
+@media (max-width: 990px) {
+    #title {
+        margin-bottom: 0px;
+    }
+
+    .container .row {
+        margin-top: 0px
+    }
+
+    .album-container {
+        margin-top: 35px;
+    }
+
+}
